# PropFlow

./: .gitignore  Dockerfile  README  cookies.txt  docker-compose.yaml  pyproject.toml  run.py
db/: init.py
db/schemas/: contratos.sql  documentos.sql  facturas.sql  inquilinos.sql  mantenimientos.sql  notificaciones_log.sql  tokens_descarga.sql  unidades.sql  usuarios.sql
doc/: README.md
doc/db_schema_files/: mcp_apps.html  saved_resource(1).html  saved_resource.html
src/: __init__.py  files.py  logger.py  scheduler.py
src/controllers/: contratos.py  documentos.py  facturas.py  inquilinos.py  mantenimientos.py  tokens_descarga.py  unidades.py  usuarios.py
src/routes/: contratos.py  dashboard.py  documentos.py  facturas.py  inquilinos.py  mantenimientos.py  unidades.py  usuarios.py
static/css/: login.css  main.css
templates/: base.html  dashboard.html  login.html
templates/contratos/: detail.html  index.html
templates/documentos/: index.html
templates/errors/: 404.html  500.html
templates/facturas/: index.html
templates/inquilinos/: detail.html  index.html
templates/mantenimientos/: index.html
templates/unidades/: detail.html  index.html
templates/usuarios/: index.html
