[project]
name = "propflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.2.2",
    "werkzeug>=3.1.6",
]
